# serde-kdl2

./: AGENTS.md  Cargo.toml  LICENSE  README.md  justfile
.cargo/: mutants.toml
.github/workflows/: ci.yml  release.yml
.ramekin/: Dockerfile
examples/: boolean_defaults.rs
src/: de.rs  error.rs  lib.rs  ser.rs
tests/: integration.rs  integration_collections.rs  integration_primitives.rs  property.proptest-regressions  property.rs
