[package]
name = "serde-kdl"
version = "0.1.0"
edition = "2021"
description = "Serde integration for KDL (KDL Document Language)"
license = "MIT OR Apache-2.0"
repository = "https://github.com/kdl-org/kdl-rs"
keywords = ["kdl", "serde", "serialization", "config"]
categories = ["config", "encoding"]

[dependencies]
kdl = "6.5"
serde = { version = "1", features = ["derive"] }
thiserror = "2"

[dev-dependencies]
serde = { version = "1", features = ["derive"] }
