[package]
name = "serde-kdl2"
version = "0.1.1-alpha.1"
edition = "2024"
description = "Serde integration for KDL (KDL Document Language)"
license = "MIT"
repository = "https://git.kejadlen.dev/alpha/serde-kdl2"
keywords = ["kdl", "serde", "serialization", "config"]
categories = ["config", "encoding"]

[dependencies]
kdl = "6.5"
serde = { version = "1", features = ["derive"] }
thiserror = "2"

[dev-dependencies]
indoc = "2"
proptest = "1"
serde = { version = "1", features = ["derive"] }
