[package]
name = "serde-kdl2"
version = "0.1.1-alpha.6"
edition = "2024"
description = "Serde integration for KDL (KDL Document Language)"
license = "MIT"
repository = "https://git.kejadlen.dev/alpha/serde-kdl2"
keywords = ["kdl", "serde", "serialization", "config"]
categories = ["config", "encoding"]

[dependencies]
kdl = "6.5"
serde = { version = "1", features = ["derive"] }
thiserror = "2"

[dev-dependencies]
hegeltest = "0.2"
indoc = "2"
serde = { version = "1", features = ["derive"] }
